reference web hosted image

--- a/ptoba.html
+++ b/ptoba.html
@@ -20,7 +20,8 @@
   <div class="container">
   
       <div class="image">
-        <img src="Zachari_Zhelqzkov._early_years.jpg"width="600" height="auto" class="image-left"class="fit-image">
+        <img src="https://raw.githubusercontent.com/ioanay/chovek/main/Zachari_Zhelqzkov._early_years.jpg" 
+     alt="Захари Желязков" width="300">
       </div>
 	      <p> &nbsp &nbsp</p>
 
