modified picture and source

--- a/ptoba.html
+++ b/ptoba.html
@@ -21,7 +21,7 @@
   
       <div class="image">
         <img src="https://raw.githubusercontent.com/ioanay/chovek/main/Zachari_Zhelqzkov._early_years.jpg" 
-     alt="Захари Желязков" width="300">
+     alt="Захари Желязков" width="600" height="auto" class="image-left"class="fit-image">
       </div>
 	      <p> &nbsp &nbsp</p>
 
@@ -30,7 +30,7 @@
     <p> &nbsp &nbsp</p>
    
 
-        <h2> Дейност на агенцията по приватизация начело с Захари Желязков</h2>
+        <h2> Дейност на агенцията по приватизация начело със Захари Желязков</h2>
        
       </div>
     </div>
@@ -158,18 +158,37 @@
 </li>
 </ul>
 
-    <div class="sources">
-      <h3>Източници</h3>
-      <a href="https://www.ciela.net/svobodna-zona-darjaven-vestnik/document/-13309440/issue/1619/programa-za-privatizatsiya-na-darzhavni-predpriyatiya-prez-1998-godina">
-        Програма за приватизация на държавни предприятия (1998)
+<div class="sources">
+  <h2>Източници</h2>
+  <ul>
+    <li>
+      <strong>ПРОГРАМА ЗА ПРИВАТИЗАЦИЯ НА ДЪРЖАВНИ ПРЕДПРИЯТИЯ ПРЕЗ 1998 Г.</strong> 
+      (ДВ, бр. 116 от 09.12.1997 г.)<br>
+      <a href="https://www.ciela.net/svobodna-zona-darjaven-vestnik/document/-13309440/issue/1619/programa-za-privatizatsiya-na-darzhavni-predpriyatiya-prez-1998-godina" target="_blank">
+        https://www.ciela.net/.../1998-godina
       </a>
-      <a href="https://www.ciela.net/svobodna-zona-darjaven-vestnik/document/-13031424/issue/658/programa-za-privatizatsiya-na-darzhavni-predpriyatiya-prez-1999-g">
-        Програма за приватизация на държавни предприятия (1999)
+    </li>
+
+    <li>
+      <strong>ПРОГРАМА ЗА ПРИВАТИЗАЦИЯ НА ДЪРЖАВНИ ПРЕДПРИЯТИЯ ПРЕЗ 1999 Г.</strong> 
+      (ДВ, бр. 147 от 15.12.1998 г.)<br>
+      <a href="https://www.ciela.net/svobodna-zona-darjaven-vestnik/document/-13031424/issue/658/programa-za-privatizatsiya-na-darzhavni-predpriyatiya-prez-1999-g" target="_blank">
+        https://www.ciela.net/.../1999-g
       </a>
-      <a href="https://www.ciela.net/svobodna-zona-darjaven-vestnik/document/-12787710/issue/713">
-        Програма за приватизация на държавни предприятия (2000)
+    </li>
+
+    <li>
+      <strong>ПРОГРАМА ЗА ПРИВАТИЗАЦИЯ НА ДЪРЖАВНИ ПРЕДПРИЯТИЯ ПРЕЗ 2000 Г.</strong> 
+      (ДВ, бр. 111 от 21.12.1999 г.)<br>
+      <a href="https://www.ciela.net/svobodna-zona-darjaven-vestnik/document/-12787710/issue/713" target="_blank">
+        https://www.ciela.net/.../2000-g
       </a>
-    </div>
-  </div>
+    </li>
+
+    <li><strong>ОТЧЕТ ЗА ИЗПЪЛНЕНИЕ НА ПРОГРАМАТА ЗА ПРИВАТИЗАЦИЯ НА ДЪРЖАВНИ ПРЕДПРИЯТИЯ ПРЕЗ 1998 Г.</strong></li>
+    <li><strong>ОТЧЕТ ЗА ИЗПЪЛНЕНИЕ НА ПРОГРАМАТА ЗА ПРИВАТИЗАЦИЯ НА ДЪРЖАВНИ ПРЕДПРИЯТИЯ ПРЕЗ 1999 Г.</strong></li>
+    <li><strong>ОТЧЕТ ЗА ИЗПЪЛНЕНИЕ НА ПРОГРАМАТА ЗА ПРИВАТИЗАЦИЯ НА ДЪРЖАВНИ ПРЕДПРИЯТИЯ ПРЕЗ 2000 Г.</strong></li>
+  </ul>
+</div>
 </body>
 </html>
